<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016 Vines High School Robotics Team
  ~
  ~                            Permission is hereby granted, free of charge, to any person obtaining a copy
  ~                            of this software and associated documentation files (the "Software"), to deal
  ~                            in the Software without restriction, including without limitation the rights
  ~                            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~                            copies of the Software, and to permit persons to whom the Software is
  ~                            furnished to do so, subject to the following conditions:
  ~
  ~                            The above copyright notice and this permission notice shall be included in all
  ~                            copies or substantial portions of the Software.
  ~
  ~                            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~                            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~                            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~                            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~                            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~                            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~                            SOFTWARE.
  -->

<resources>

  <string name="app_name">FTC Robot Controller</string>

  <!-- Menu -->
  <string name="inspection_mode_menu_item">Self Inspect</string>
  <string name="programming_mode_menu_item">Programming Mode</string>
  <string name="blocks_menu_item">Blocks</string>
  <string name="settings_menu_item">Settings</string>
  <string name="restart_robot_menu_item">Restart Robot</string>
  <string name="configure_robot_menu_item">Configure Robot</string>
  <string name="about_menu_item">About</string>
  <string name="exit_menu_item">Exit</string>

  <!-- Preferences -->
  <string name="pref_view_logs">View Logs</string>
  <string name="pref_sound_on_off_title">Sound</string>

  <!-- Toast messages -->  
  <string name="toastWifiConfigurationComplete">Configuration Complete</string>
  <string name="toastRestartingRobot">Restarting Robot</string>
  <string name="toastConfigureRobotBeforeProgrammingMode">You must Configure Robot before starting Programming Mode.</string>

</resources>
