<!--
  ~ Copyright (c) 2016 Vines High School Robotics Team
  ~
  ~                            Permission is hereby granted, free of charge, to any person obtaining a copy
  ~                            of this software and associated documentation files (the "Software"), to deal
  ~                            in the Software without restriction, including without limitation the rights
  ~                            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~                            copies of the Software, and to permit persons to whom the Software is
  ~                            furnished to do so, subject to the following conditions:
  ~
  ~                            The above copyright notice and this permission notice shall be included in all
  ~                            copies or substantial portions of the Software.
  ~
  ~                            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~                            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~                            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~                            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~                            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~                            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~                            SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <item
    android:id="@+id/action_blocks"
    android:orderInCategory="98"
    android:showAsAction="never" 
    android:visible="false"
    android:title="@string/blocks_menu_item"/>
  <item
    android:id="@+id/action_settings"
    android:orderInCategory="99"
    android:showAsAction="never"
    android:title="@string/settings_menu_item"/>
  <item
    android:id="@+id/action_restart_robot"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/restart_robot_menu_item"/>

  <item
    android:id="@+id/action_configure_robot"
    android:orderInCategory="101"
    android:showAsAction="never"
    android:title="@string/configure_robot_menu_item"/>

  <item
    android:id="@+id/action_programming_mode"
    android:orderInCategory="103"
    android:showAsAction="never"
    android:title="@string/programming_mode_menu_item"/>

  <item
      android:id="@+id/action_inspection_mode"
      android:orderInCategory="104"
      android:showAsAction="never"
      android:title="@string/inspection_mode_menu_item"/>

  <item
    android:id="@+id/action_about"
    android:orderInCategory="999"
    android:icon="@android:drawable/ic_menu_info_details"
    android:title="@string/about_menu_item"/>

  <item
    android:id="@+id/action_exit_app"
    android:orderInCategory="1000"
    android:icon="@android:drawable/ic_menu_info_details"
    android:title="@string/exit_menu_item"/>

</menu>
